@@ -9,6 +9,9 @@ Zope Changes
 
     Restructuring
 
+      - Updated to ZODB 3.9.0a10. ZODB-level version support has been
+        removed and ZopeUndo now is part of Zope2.
+
       - The Zope2 SVN trunk is now a buildout pulling in all dependencies as
         actual released packages and not SVN externals anymore.
 
